--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "keywords": ["Laravel", "laravel-notify", "notification"],
   "require": {
     "php": ">=7.4",
-    "illuminate/support": "~7.0|~8.0"
+    "illuminate/support": "~7.0|~8.0|~9.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.0",
